
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ssize_t ;
typedef int buf ;
typedef int FILE ;


 int BUFSIZ ;
 int asprintf (char**,char*,char const*,...) ;
 int cleanup (char*) ;
 int close (int) ;
 int editit (char*) ;
 int err (int,char*) ;
 int fclose (int *) ;
 int feof (int *) ;
 scalar_t__ ferror (int *) ;
 int * fopen (char*,char*) ;
 size_t fread (char*,int,int,int *) ;
 int free (char*) ;
 size_t fwrite (char*,int,size_t,int ) ;
 scalar_t__ isspace (char const) ;
 int mkstemp (char*) ;
 int outfp ;
 size_t strlen (char*) ;
 char const* tmpdir ;
 scalar_t__ unlink (char*) ;
 int warn (char*,...) ;
 int warnx (char*,...) ;
 int write (int,char*,size_t) ;

int
eparse(const char *cmd, const char *left, const char *right)
{
 FILE *file;
 size_t nread;
 int fd;
 char *filename;
 char buf[BUFSIZ], *text;


 while (isspace(*cmd))
  ++cmd;

 text = ((void*)0);
 switch (*cmd) {
 case '\0':

  break;

 case 'b':

  if (left == ((void*)0))
   goto RIGHT;
  if (right == ((void*)0))
   goto LEFT;


  if (asprintf(&text, "%s\n%s\n", left, right) == -1)
   err(2, "could not allocate memory");
  break;

 case 'l':
LEFT:

  if (left == ((void*)0))
   break;

  if (asprintf(&text, "%s\n", left) == -1)
   err(2, "could not allocate memory");

  break;

 case 'r':
RIGHT:

  if (right == ((void*)0))
   break;

  if (asprintf(&text, "%s\n", right) == -1)
   err(2, "could not allocate memory");

  break;

 default:
  return (-1);
 }


 if (asprintf(&filename, "%s/sdiff.XXXXXXXXXX", tmpdir) == -1)
  err(2, "asprintf");
 if ((fd = mkstemp(filename)) == -1)
  err(2, "mkstemp");
 if (text != ((void*)0)) {
  size_t len;
  ssize_t nwritten;

  len = strlen(text);
  if ((nwritten = write(fd, text, len)) == -1 ||
      (size_t)nwritten != len) {
   warn("error writing to temp file");
   cleanup(filename);
  }
 }
 close(fd);


 free(text);


 if (editit(filename) == -1) {
  warn("error editing %s", filename);
  cleanup(filename);
 }


 if (!(file = fopen(filename, "r"))) {
  warn("could not open edited file: %s", filename);
  cleanup(filename);
 }


 for (nread = sizeof(buf); nread == sizeof(buf);) {
  size_t nwritten;

  nread = fread(buf, sizeof(*buf), sizeof(buf), file);

  if (nread != sizeof(buf) &&
      (ferror(file) || !feof(file))) {
   warnx("error reading edited file: %s", filename);
   cleanup(filename);
  }





  if (!nread)
   break;


  nwritten = fwrite(buf, sizeof(*buf), nread, outfp);
  if (nwritten != nread) {
   warnx("error writing to output file");
   cleanup(filename);
  }
 }


 if (unlink(filename))
  warn("could not delete: %s", filename);
 fclose(file);

 free(filename);

 return (0);
}
